--- a/pages/19102.html
+++ b/pages/19102.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      top quark in nLab
+      generation of fundamental particles in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      top quark
+      generation of fundamental particles
   </h1>
 
 
@@ -292,7 +292,7 @@ margin-left: 0em;
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/8370/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -466,19 +466,38 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>In the <a class='existingWikiWord' href='/nlab/show/standard+model+of+particle+physics'>standard model of particle physics</a> the <em>top quark</em> is the up-type <a class='existingWikiWord' href='/nlab/show/quark'>quark</a> in the third <a class='existingWikiWord' href='/nlab/show/generation+of+fundamental+particles'>generation of fermions</a>.</p>
+<p>The <a class='existingWikiWord' href='/nlab/show/standard+model+of+particle+physics'>standard model of particle physics</a> has the curious property that its content of <a class='existingWikiWord' href='/nlab/show/fermion'>fermions</a> appears in three sets of particles that share all properties except that their <a class='existingWikiWord' href='/nlab/show/mass'>rest mass</a> increases drastically from one set to the next. These are called the three “generations” of fermionic particles.</p>
 
-<p>It is the <a class='existingWikiWord' href='/nlab/show/fundamental+particle'>fundamental particle</a> with by far the largest <a class='existingWikiWord' href='/nlab/show/mass'>rest mass</a> (after <a class='existingWikiWord' href='/nlab/show/Higgs+field'>Higgs mechanism</a>). This implies that top quark <a class='existingWikiWord' href='/nlab/show/virtual+particle'>virtual particles</a> in <a class='existingWikiWord' href='/nlab/show/Feynman+diagram'>Feynman diagrams</a> typically gives the dominant contribution to <a class='existingWikiWord' href='/nlab/show/loop+order'>loop effects</a> in <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative</a> <a class='existingWikiWord' href='/nlab/show/quantum+observable'>quantum observables</a>, notably in relation to the <a class='existingWikiWord' href='/nlab/show/Higgs+field'>Higgs field</a>.</p>
+<p>The first generation contains the</p>
+<table><thead><tr><th>type of <a class='existingWikiWord' href='/nlab/show/fundamental+particle'>fundamental particle</a></th><th>First <span class='newWikiWord'>generation<a href='/nlab/new/genration+of+fundamental+particles'>?</a></span></th><th>Second <a class='existingWikiWord' href='/nlab/show/generation+of+fundamental+particles'>generation</a></th><th>Third <a class='existingWikiWord' href='/nlab/show/generation+of+fundamental+particles'>generation</a></th></tr></thead><tbody><tr><td style='text-align: left;'>up-type <a class='existingWikiWord' href='/nlab/show/quark'>quark</a></td><td style='text-align: left;'><span class='newWikiWord'>up quark<a href='/nlab/new/up+quark'>?</a></span></td><td style='text-align: left;'><span class='newWikiWord'>charm quark<a href='/nlab/new/charm+quark'>?</a></span></td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/top+quark'>top quark</a></td></tr>
+<tr><td style='text-align: left;'>down-type <a class='existingWikiWord' href='/nlab/show/quark'>quark</a></td><td style='text-align: left;'><span class='newWikiWord'>down quark<a href='/nlab/new/down+quark'>?</a></span></td><td style='text-align: left;'><span class='newWikiWord'>strange quark<a href='/nlab/new/strange+quark'>?</a></span></td><td style='text-align: left;'><span class='newWikiWord'>bottom quark<a href='/nlab/new/bottom+quark'>?</a></span></td></tr>
+<tr><td style='text-align: left;'>charged <a class='existingWikiWord' href='/nlab/show/lepton'>lepton</a></td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/electron'>electron</a></td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/muon'>muon</a></td><td style='text-align: left;'><span class='newWikiWord'>tau<a href='/nlab/new/tau'>?</a></span></td></tr>
+<tr><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/neutrino'>neutrino</a></td><td style='text-align: left;'><span class='newWikiWord'>electron neutrino<a href='/nlab/new/electron+neutrino'>?</a></span></td><td style='text-align: left;'><span class='newWikiWord'>muon neutrino<a href='/nlab/new/muon+neutrino'>?</a></span></td><td style='text-align: left;'><span class='newWikiWord'>tau neutrino<a href='/nlab/new/tau+neutrino'>?</a></span></td></tr>
+</tbody></table>
+<p>Any reason for this striking pattern presently remains mysterious.</p>
+
+<p>While the particle content of any one single generation would naturally be explained by <a class='existingWikiWord' href='/nlab/show/GUT'>GUT</a> models, in terms of a single <a class='existingWikiWord' href='/nlab/show/irreducible+representation'>irreducible representation</a> of a <a class='existingWikiWord' href='/nlab/show/simple+group'>simple</a> <a class='existingWikiWord' href='/nlab/show/gauge+group'>gauge group</a> containing that of the <a class='existingWikiWord' href='/nlab/show/standard+model+of+particle+physics'>standard model of particle physics</a>, this does not explain why there are three almost identical copies of this.</p>
+
+<p>One suggestion to explain this phenomenon appears in <a class='existingWikiWord' href='/nlab/show/intersecting+D-brane+model'>intersecting D-brane models</a>. See there at <em><a href='https://ncatlab.org/nlab/show/intersecting+D-brane+model#GenerationsOfFermions'>Generations of fermions</a></em>.</p>
 
 <h2 id='references'>References</h2>
 
+<p>See also</p>
+
 <ul>
-<li>Wikipedia, <em><a href='https://en.wikipedia.org/wiki/Top_quark'>Top quark</a></em></li>
+<li>Wikipedia, <em><a href='https://en.wikipedia.org/wiki/Generation_(particle_physics)'>Generation (particle physics)</a></em></li>
 </ul>
+
+<p>
+</p>
+
+<p>
+ 
+</p>
 </div>
 
 <div class="revisedby">
-  Revised on April 11, 2018 10:55:48
+  Created on April 11, 2018 10:56:34
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (91.230.41.206).
   See <a href="https://ncatlab.org/nlab/author/Urs Schreiber" style="color: #005c19">Author — Urs Schreiber</a> for an overview of the nLab pages to which Urs Schreiber has contributed.
@@ -486,15 +505,15 @@ margin-left: 0em;
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/top+quark" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/top+quark/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/top+quark" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/top+quark" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/generation+of+fundamental+particles" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
 
   <span class="views">
     | Views:
-    <a href="/nlab/print/top+quark" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/generation+of+fundamental+particles" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/top+quark" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/generation+of+fundamental+particles" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/top+quark" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/generation+of+fundamental+particles" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
