--- a/pages/3814.html
+++ b/pages/3814.html
@@ -290,12 +290,10 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8363/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -942,6 +940,10 @@ margin-left: 0em;
 
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/quark'>quark</a></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/top+quark'>top quark</a></li>
+</ul>
 </li>
 
 <li>
@@ -1106,6 +1108,10 @@ margin-left: 0em;
 
 <ul>
 <li>
+<p><a class='existingWikiWord' href='/nlab/show/generation+of+fundamental+particles'>generation of fundamental particles</a></p>
+</li>
+
+<li>
 <p><a class='existingWikiWord' href='/nlab/show/Yang-Mills+theory'>Yang-Mills theory</a></p>
 
 <ul>
@@ -1156,9 +1162,9 @@ margin-left: 0em;
 
 <p><strong><a class='existingWikiWord' href='/nlab/show/standard+model+of+particle+physics'>standard model of particle physics</a> <a class='existingWikiWord' href='/nlab/show/standard+model+of+cosmology'>and cosmology</a></strong></p>
 <table><thead><tr><th><a class='existingWikiWord' href='/nlab/show/theory+%28physics%29'>theory</a>:</th><th><a class='existingWikiWord' href='/nlab/show/Einstein-Hilbert+action'>Einstein</a>-</th><th><a class='existingWikiWord' href='/nlab/show/Einstein-Yang-Mills+theory'>Yang-Mills</a>-</th><th><a class='existingWikiWord' href='/nlab/show/Einstein-Yang-Mills-Dirac+theory'>Dirac</a>-</th><th><a class='existingWikiWord' href='/nlab/show/Einstein-Yang-Mills-Dirac-Higgs+theory'>Higgs</a></th></tr></thead><tbody><tr><td style='text-align: left;'></td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/gravity'>gravity</a></td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/electroweak+field'>electroweak</a> and <a class='existingWikiWord' href='/nlab/show/nuclear+force'>strong nuclear force</a></td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/fermion'>fermionic</a> <a class='existingWikiWord' href='/nlab/show/matter'>matter</a></td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/scalar+field'>scalar field</a></td></tr>
-<tr><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field</a> content:</td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/vielbein'>vielbein field</a> <math class='maruku-mathml' display='inline' id='mathml_1e855a86e78e2a232d31cc592e59fe2627705e23_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>e</mi></mrow><annotation encoding='application/x-tex'>e</annotation></semantics></math></td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/principal+connection'>principal connection</a> <math class='maruku-mathml' display='inline' id='mathml_1e855a86e78e2a232d31cc592e59fe2627705e23_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>∇</mo></mrow><annotation encoding='application/x-tex'>\nabla</annotation></semantics></math></td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/spinor+bundle'>spinor</a> <math class='maruku-mathml' display='inline' id='mathml_1e855a86e78e2a232d31cc592e59fe2627705e23_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ψ</mi></mrow><annotation encoding='application/x-tex'>\psi</annotation></semantics></math></td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/scalar+field'>scalar field</a> <math class='maruku-mathml' display='inline' id='mathml_1e855a86e78e2a232d31cc592e59fe2627705e23_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>H</mi></mrow><annotation encoding='application/x-tex'>H</annotation></semantics></math></td></tr>
+<tr><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field</a> content:</td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/vielbein'>vielbein field</a> <math class='maruku-mathml' display='inline' id='mathml_8e9c8584f627aabf02ccf4066cedc42d67f64ba2_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>e</mi></mrow><annotation encoding='application/x-tex'>e</annotation></semantics></math></td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/principal+connection'>principal connection</a> <math class='maruku-mathml' display='inline' id='mathml_8e9c8584f627aabf02ccf4066cedc42d67f64ba2_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>∇</mo></mrow><annotation encoding='application/x-tex'>\nabla</annotation></semantics></math></td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/spinor+bundle'>spinor</a> <math class='maruku-mathml' display='inline' id='mathml_8e9c8584f627aabf02ccf4066cedc42d67f64ba2_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ψ</mi></mrow><annotation encoding='application/x-tex'>\psi</annotation></semantics></math></td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/scalar+field'>scalar field</a> <math class='maruku-mathml' display='inline' id='mathml_8e9c8584f627aabf02ccf4066cedc42d67f64ba2_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>H</mi></mrow><annotation encoding='application/x-tex'>H</annotation></semantics></math></td></tr>
 <tr><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/Lagrangian+density'>Lagrangian</a>:</td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/scalar+curvature'>scalar curvature</a> density</td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/field+strength'>field strength</a> squared</td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/Dirac+operator'>Dirac operator</a> component density</td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/field+strength'>field strength</a> squared + potential density</td></tr>
-<tr><td style='text-align: left;'><math class='maruku-mathml' display='inline' id='mathml_1e855a86e78e2a232d31cc592e59fe2627705e23_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>L</mi><mo>=</mo></mrow><annotation encoding='application/x-tex'>L = </annotation></semantics></math></td><td style='text-align: left;'><math class='maruku-mathml' display='inline' id='mathml_1e855a86e78e2a232d31cc592e59fe2627705e23_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>R</mi><mo stretchy='false'>(</mo><mi>e</mi><mo stretchy='false'>)</mo><mi>vol</mi><mo stretchy='false'>(</mo><mi>e</mi><mo stretchy='false'>)</mo><mo>+</mo></mrow><annotation encoding='application/x-tex'>R(e) vol(e) + </annotation></semantics></math></td><td style='text-align: left;'><math class='maruku-mathml' display='inline' id='mathml_1e855a86e78e2a232d31cc592e59fe2627705e23_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>⟨</mo><msub><mi>F</mi> <mo>∇</mo></msub><mo>∧</mo><msub><mo>⋆</mo> <mi>e</mi></msub><msub><mi>F</mi> <mo>∇</mo></msub><mo stretchy='false'>⟩</mo><mo>+</mo></mrow><annotation encoding='application/x-tex'>\langle F_\nabla \wedge \star_e F_\nabla\rangle + </annotation></semantics></math></td><td style='text-align: left;'><math class='maruku-mathml' display='inline' id='mathml_1e855a86e78e2a232d31cc592e59fe2627705e23_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>ψ</mi><mo>,</mo><msub><mi>D</mi> <mrow><mo stretchy='false'>(</mo><mi>e</mi><mo>,</mo><mo>∇</mo><mo stretchy='false'>)</mo></mrow></msub><mi>ψ</mi><mo stretchy='false'>)</mo><mi>vol</mi><mo stretchy='false'>(</mo><mi>e</mi><mo stretchy='false'>)</mo><mo>+</mo></mrow><annotation encoding='application/x-tex'> (\psi , D_{(e,\nabla)} \psi) vol(e) + </annotation></semantics></math></td><td style='text-align: left;'><math class='maruku-mathml' display='inline' id='mathml_1e855a86e78e2a232d31cc592e59fe2627705e23_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>∇</mo><mover><mi>H</mi><mo stretchy='false'>¯</mo></mover><mo>∧</mo><msub><mo>⋆</mo> <mi>e</mi></msub><mo>∇</mo><mi>H</mi><mo>+</mo><mrow><mo>(</mo><mi>λ</mi><msup><mrow><mo stretchy='false'>|</mo><mi>H</mi><mo stretchy='false'>|</mo></mrow> <mn>4</mn></msup><mo>−</mo><msup><mi>μ</mi> <mn>2</mn></msup><msup><mrow><mo stretchy='false'>|</mo><mi>H</mi><mo stretchy='false'>|</mo></mrow> <mn>2</mn></msup><mo>)</mo></mrow><mi>vol</mi><mo stretchy='false'>(</mo><mi>e</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'> \nabla \bar H \wedge \star_e \nabla H  + \left(\lambda  {\vert H\vert}^4 - \mu^2 {\vert H\vert}^2 \right) vol(e) </annotation></semantics></math></td></tr>
+<tr><td style='text-align: left;'><math class='maruku-mathml' display='inline' id='mathml_8e9c8584f627aabf02ccf4066cedc42d67f64ba2_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>L</mi><mo>=</mo></mrow><annotation encoding='application/x-tex'>L = </annotation></semantics></math></td><td style='text-align: left;'><math class='maruku-mathml' display='inline' id='mathml_8e9c8584f627aabf02ccf4066cedc42d67f64ba2_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>R</mi><mo stretchy='false'>(</mo><mi>e</mi><mo stretchy='false'>)</mo><mi>vol</mi><mo stretchy='false'>(</mo><mi>e</mi><mo stretchy='false'>)</mo><mo>+</mo></mrow><annotation encoding='application/x-tex'>R(e) vol(e) + </annotation></semantics></math></td><td style='text-align: left;'><math class='maruku-mathml' display='inline' id='mathml_8e9c8584f627aabf02ccf4066cedc42d67f64ba2_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>⟨</mo><msub><mi>F</mi> <mo>∇</mo></msub><mo>∧</mo><msub><mo>⋆</mo> <mi>e</mi></msub><msub><mi>F</mi> <mo>∇</mo></msub><mo stretchy='false'>⟩</mo><mo>+</mo></mrow><annotation encoding='application/x-tex'>\langle F_\nabla \wedge \star_e F_\nabla\rangle + </annotation></semantics></math></td><td style='text-align: left;'><math class='maruku-mathml' display='inline' id='mathml_8e9c8584f627aabf02ccf4066cedc42d67f64ba2_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>ψ</mi><mo>,</mo><msub><mi>D</mi> <mrow><mo stretchy='false'>(</mo><mi>e</mi><mo>,</mo><mo>∇</mo><mo stretchy='false'>)</mo></mrow></msub><mi>ψ</mi><mo stretchy='false'>)</mo><mi>vol</mi><mo stretchy='false'>(</mo><mi>e</mi><mo stretchy='false'>)</mo><mo>+</mo></mrow><annotation encoding='application/x-tex'> (\psi , D_{(e,\nabla)} \psi) vol(e) + </annotation></semantics></math></td><td style='text-align: left;'><math class='maruku-mathml' display='inline' id='mathml_8e9c8584f627aabf02ccf4066cedc42d67f64ba2_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>∇</mo><mover><mi>H</mi><mo stretchy='false'>¯</mo></mover><mo>∧</mo><msub><mo>⋆</mo> <mi>e</mi></msub><mo>∇</mo><mi>H</mi><mo>+</mo><mrow><mo>(</mo><mi>λ</mi><msup><mrow><mo stretchy='false'>|</mo><mi>H</mi><mo stretchy='false'>|</mo></mrow> <mn>4</mn></msup><mo>−</mo><msup><mi>μ</mi> <mn>2</mn></msup><msup><mrow><mo stretchy='false'>|</mo><mi>H</mi><mo stretchy='false'>|</mo></mrow> <mn>2</mn></msup><mo>)</mo></mrow><mi>vol</mi><mo stretchy='false'>(</mo><mi>e</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'> \nabla \bar H \wedge \star_e \nabla H  + \left(\lambda  {\vert H\vert}^4 - \mu^2 {\vert H\vert}^2 \right) vol(e) </annotation></semantics></math></td></tr>
 </tbody></table>
 <h2 id='references'>References</h2>
 
@@ -1180,7 +1186,7 @@ margin-left: 0em;
 <li><a class='existingWikiWord' href='/nlab/show/Alain+Connes'>Alain Connes</a>, <a class='existingWikiWord' href='/nlab/show/Matilde+Marcolli'>Matilde Marcolli</a>, chapter I, section 12 <em><a class='existingWikiWord' href='/nlab/show/Noncommutative+Geometry%2C+Quantum+Fields+and+Motives'>Noncommutative Geometry, Quantum Fields and Motives</a></em></li>
 </ul>
 
-<p>For an <math class='maruku-mathml' display='inline' id='mathml_1e855a86e78e2a232d31cc592e59fe2627705e23_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab dictionary (work in progress) of the language of mathematicians and physicists see:</p>
+<p>For an <math class='maruku-mathml' display='inline' id='mathml_8e9c8584f627aabf02ccf4066cedc42d67f64ba2_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab dictionary (work in progress) of the language of mathematicians and physicists see:</p>
 
 <ul>
 <li><a class='existingWikiWord' href='/domenicofiorenza/published/The+standard+model' title='domenicofiorenza'>The standard model</a></li>
@@ -1206,19 +1212,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on March 31, 2018 21:15:32 
+  Revised on April 11, 2018 10:54:59
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (94.220.90.187)
+  (91.230.41.206).
+  See <a href="https://ncatlab.org/nlab/author/Urs Schreiber" style="color: #005c19">Author — Urs Schreiber</a> for an overview of the nLab pages to which Urs Schreiber has contributed.
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/standard+model+of+particle+physics" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/standard+model+of+particle+physics/27" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(27 revisions)</span> | <a href="/nlab/show/diff/standard+model+of+particle+physics" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/standard+model+of+particle+physics" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/standard+model+of+particle+physics" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/standard+model+of+particle+physics/28" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(28 revisions)</span> | <a href="/nlab/show/diff/standard+model+of+particle+physics" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/standard+model+of+particle+physics" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/standard+model+of+particle+physics" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/standard+model+of+particle+physics" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/standard+model+of+particle+physics" id="view_source" rel="nofollow">Source</a>
