--- a/pages/19104.html
+++ b/pages/19104.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      constructible set in nLab
+      Urtzi Buijs in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      constructible set
+      Urtzi Buijs
   </h1>
 
 
@@ -292,7 +292,7 @@ margin-left: 0em;
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/3858/#Item_4" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8421/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -306,74 +306,43 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#definition'>Definition</a></li><li><a href='#examples'>Examples</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
-<h2 id='idea'>Idea</h2>
+    <ul>
+<li><a href='http://www.genealogy.ams.org/id.php?id=97618'>Mathematics Genealogy page</a></li>
+</ul>
 
-<p><em>Constructible sets</em> are one of the central notions in <a class='existingWikiWord' href='/nlab/show/descriptive+set+theory'>descriptive set theory</a>.</p>
-
-<h2 id='definition'>Definition</h2>
-
-<p>In <a class='existingWikiWord' href='/nlab/show/set+theory'>set theory</a>, a (Gödel) <strong>constructible set</strong> is any set in a <a class='existingWikiWord' href='/nlab/show/constructible+universe'>constructible universe</a>, see there.</p>
-
-<p>One can generalize to constructible elements in more general <a class='existingWikiWord' href='/nlab/show/Boolean+algebra'>Boolean lattices</a>.</p>
-
-<h2 id='examples'>Examples</h2>
+<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_22ed099b919a2cdef69d562349686f34e2a8da5e_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
 <li>
-<p>In <a class='existingWikiWord' href='/nlab/show/general+topology'>general topology</a>, given a <a class='existingWikiWord' href='/nlab/show/topological+space'>topological space</a> <math class='maruku-mathml' display='inline' id='mathml_4e8b16ae85d62c06f4b7f06942d7ea6c7d92d3a6_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>X</mi><mo>,</mo><mi>τ</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(X,\tau)</annotation></semantics></math>, a <strong>constructible subset</strong> of <math class='maruku-mathml' display='inline' id='mathml_4e8b16ae85d62c06f4b7f06942d7ea6c7d92d3a6_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math>, sometimes (when <math class='maruku-mathml' display='inline' id='mathml_4e8b16ae85d62c06f4b7f06942d7ea6c7d92d3a6_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>X</mi><mo>,</mo><mi>τ</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(X,\tau)</annotation></semantics></math> is fixed) often simply referred as a constructible set, is an element of the smallest Boolean algebra of sets containing the topology <math class='maruku-mathml' display='inline' id='mathml_4e8b16ae85d62c06f4b7f06942d7ea6c7d92d3a6_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>τ</mi></mrow><annotation encoding='application/x-tex'>\tau</annotation></semantics></math>; the constructible sets are precisely the finite unions of locally closed sets.</p>
+<p><a class='existingWikiWord' href='/nlab/show/rational+homotopy+theory'>rational homotopy theory</a></p>
 </li>
 
 <li>
-<p>In the case of <a class='existingWikiWord' href='/nlab/show/theory'>theory</a> ACF of <a class='existingWikiWord' href='/nlab/show/algebraically+closed+field'>algebraically closed fields</a>, for every <a class='existingWikiWord' href='/nlab/show/model'>model</a> <math class='maruku-mathml' display='inline' id='mathml_4e8b16ae85d62c06f4b7f06942d7ea6c7d92d3a6_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>K</mi></mrow><annotation encoding='application/x-tex'>K</annotation></semantics></math>, the constructible sets in the <a class='existingWikiWord' href='/nlab/show/affine+space'>affine space</a> <math class='maruku-mathml' display='inline' id='mathml_4e8b16ae85d62c06f4b7f06942d7ea6c7d92d3a6_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>K</mi> <mi>n</mi></msup></mrow><annotation encoding='application/x-tex'>K^n</annotation></semantics></math> are precisely the <a class='existingWikiWord' href='/nlab/show/definable+set'>definable sets</a> for the <a class='existingWikiWord' href='/nlab/show/language+%28in+model+theory%29'>language</a> of <a class='existingWikiWord' href='/nlab/show/field'>fields</a>.</p>
+<p><a class='existingWikiWord' href='/nlab/show/L-infinity-algebra'>L-infinity algebra</a></p>
 </li>
 </ul>
 
-<h2 id='related_concepts'>Related concepts</h2>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/recursive+subset'>recursive subset</a>, <a class='existingWikiWord' href='/nlab/show/definable+set'>definable set</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/constructible+sheaf'>constructible sheaf</a></p>
-</li>
-</ul>
-
-<h2 id='references'>References</h2>
-
-<ul>
-<li>Wikipedia, <em><a href='http://en.wikipedia.org/wiki/Constructible_set_%28topology%29'>Constructible set</a></em></li>
-</ul>
-
-<p>
-</p>
-
-<p>
- 
-</p>
+<p><div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
 </div>
 
 <div class="revisedby">
-  Revised on April 12, 2018 08:18:38
-  by <span class="newWikiWord">tonyxty<a href="/nlab/new/tonyxty">?</a></span>
-  (137.132.228.35).
-  See <a href="https://ncatlab.org/nlab/author/tonyxty" style="color: #005c19">Author — tonyxty</a> for an overview of the nLab pages to which tonyxty has contributed.
+  Created on April 12, 2018 08:37:52
+  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
+  (91.230.41.206).
+  See <a href="https://ncatlab.org/nlab/author/Urs Schreiber" style="color: #005c19">Author — Urs Schreiber</a> for an overview of the nLab pages to which Urs Schreiber has contributed.
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/constructible+set" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/constructible+set/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/constructible+set" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/constructible+set" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Urtzi+Buijs" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
 
   <span class="views">
     | Views:
-    <a href="/nlab/print/constructible+set" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/Urtzi+Buijs" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/constructible+set" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/Urtzi+Buijs" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/constructible+set" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/Urtzi+Buijs" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
